--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemon": "^1.8.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "axios": "^0.18.0",
